[package]
name = "rasen"
version = "0.7.0"
authors = ["l3ops <root@leops.me>"]
description = "Generate SPIR-V bytecode from an operation graph"
repository = "https://github.com/leops/rasen"
readme = "README.md"
keywords = ["SPIRV", "Vulkan", "GLSL"]
license = "MIT"
build = "build.rs"

[build-dependencies]
quote = "0.3"

[dependencies]
petgraph = "0.2.8"
error-chain = "*"
spirv_headers = "*"
rspirv = "*"
