[package]
name = "rasen"
version = "0.8.0"
authors = ["l3ops <root@leops.me>"]
description = "Generate SPIR-V bytecode from a data flow graph"
documentation = "https://docs.rs/rasen/"
homepage = "https://github.com/leops/rasen#readme"
repository = "https://github.com/leops/rasen"
readme = "README.md"
license = "MIT"
build = "build.rs"
keywords = [
    "SPIRV",
    "Vulkan",
    "GLSL",
]
categories = [
    "development-tools",
    "rendering",
]
exclude = [
    "benches/*",
    "tests/*",
]

[features]
default = []

[build-dependencies]
quote = "0.3.15"

[dependencies]
petgraph = "0.4.4"
error-chain = "0.10.0"
spirv_headers = "1.1.5"
rspirv = "0.4.0"
clippy = { version = "0.0.122", optional = true }
