[package]
name = "rasen-dsl"
version = "0.1.0"
authors = ["l3ops <rasen@leops.me>"]
description = "Wrapper for the Rasen compiler to write SPIR-V shaders in Rust"
documentation = "https://docs.rs/rasen-dsl/"
homepage = "https://github.com/leops/rasen#readme"
repository = "https://github.com/leops/rasen"
build = "build.rs"

[features]
default = []

[dependencies]
rasen = { version = "0.9.0", path = "../rasen" }
clippy = { version = "0.0.134", optional = true }

[build-dependencies]
syn = "0.11.11"
quote = "0.3.15"
clippy = { version = "0.0.134", optional = true }
