[package]
name = "rasen-dsl"
version = "0.2.0"
authors = ["l3ops <rasen@leops.me>"]
description = "Wrapper for the Rasen compiler to write SPIR-V shaders in Rust"
documentation = "https://docs.rs/rasen-dsl/"
homepage = "https://github.com/leops/rasen#readme"
repository = "https://github.com/leops/rasen"
readme = "README.md"
license = "MIT"
build = "build.rs"
keywords = [
    "SPIRV",
    "Vulkan",
    "GLSL",
]
categories = [
    "development-tools",
    "rendering",
]

[features]
default = []
functions = []

[dependencies]
rasen = { version = "0.12.0", path = "../rasen" }
clippy = { version = "0.0.134", optional = true }

[build-dependencies]
syn = "0.11.11"
quote = "0.3.15"
clippy = { version = "0.0.134", optional = true }

[dev-dependencies]
pretty_assertions = "0.5.1"
rspirv = "0.5.2"
