[package]
name = "rasen-dsl"
version = "0.2.0"
authors = ["l3ops <rasen@leops.me>"]
description = "Wrapper for the Rasen compiler to write SPIR-V shaders in Rust"
documentation = "https://docs.rs/rasen-dsl/"
homepage = "https://github.com/leops/rasen#readme"
repository = "https://github.com/leops/rasen"
readme = "README.md"
license = "MIT"
build = "build.rs"
keywords = [
    "SPIRV",
    "Vulkan",
    "GLSL",
]
categories = [
    "development-tools",
    "rendering",
]

[dependencies]
rasen = { version = "0.12.0", path = "../rasen" }

[build-dependencies]
syn = "0.15.15"
quote = "0.6.8"
proc-macro2 = "0.4.20"

[dev-dependencies]
pretty_assertions = "0.5.1"
rspirv = "0.5.4"
