[package]
name = "rasen-plugin"
version = "0.1.0"
authors = ["l3ops <github@leops.me>"]

[lib]
plugin = true

[features]
default = []

[dependencies]
quote = "0.3.15"
clippy = { version = "0.0.134", optional = true }

[dev-dependencies]
rasen = { version = "0.10.0", path = "../rasen" }
rasen-dsl = { version = "0.1.0", path = "../rasen-dsl" }
