[package]
name = "rasen"
version = "0.10.0"
authors = ["l3ops <rasen@leops.me>"]
description = "Generate SPIR-V bytecode from a data flow graph"
documentation = "https://docs.rs/rasen/"
homepage = "https://github.com/leops/rasen#readme"
repository = "https://github.com/leops/rasen"
readme = "README.md"
license = "MIT"
build = "build.rs"
keywords = [
    "SPIRV",
    "Vulkan",
    "GLSL",
]
categories = [
    "development-tools",
    "rendering",
]

[badges]
appveyor = { repository = "leops/rasen" }
travis-ci = { repository = "leops/rasen" }

[features]
default = []

[build-dependencies]
quote = "0.3.15"
clippy = { version = "0.0.177", optional = true }

[dependencies]
petgraph = "0.4.5"
error-chain = "0.10.0"
spirv_headers = "1.2.2"
rspirv = "0.5.1"
clippy = { version = "0.0.177", optional = true }
