[package]
name = "rasen"
version = "0.12.0"
authors = ["l3ops <rasen@leops.me>"]
description = "Build a SPIR-V module from a data flow graph"
documentation = "https://docs.rs/rasen/"
homepage = "https://github.com/leops/rasen#readme"
repository = "https://github.com/leops/rasen"
readme = "README.md"
license = "MIT"
build = "build.rs"
keywords = [
    "SPIRV",
    "Vulkan",
    "GLSL",
]
categories = [
    "development-tools",
    "rendering",
]

[badges]
appveyor = { repository = "leops/rasen" }
travis-ci = { repository = "leops/rasen" }

[dependencies]
petgraph = "0.4.13"
error-chain = { version = "0.12.0", default-features = false }
spirv_headers = "1.3.4"
rspirv = "0.5.4"
fnv = "1.0.6"

[build-dependencies]
quote = "0.6.8"
proc-macro2 = "0.4.20"

[dev-dependencies]
insta = { git = "https://github.com/mitsuhiko/insta", rev="7432f45", version = "0.5.2" }
